<resources>
    <string name="app_name">Vme-Demo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_done">Done</string>
    <string name="socket_time_out">Sorry, Unable to connect server. Please try again</string>
    <string name="internal_server_error_500">Oops!! There is some problem with request. Please try again</string>
    <string name="logout_401">You have been logged out because you signed in on another device OR your account is inactive</string>
    <string name="no_internet">No Internet Connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_p2p_challenge_app_for_the_competitor_inside_us">A p2p challenge app for the competitor inside us!</string>
    <string name="challenge_your_friends">Challenge your Friends!</string>
    <string name="next">Next</string>
    <string name="games">games</string>
    <string name="getting_started">Getting Started</string>
    <string name="an_app_for_the_competitor_inside_us">An app for the competitor inside us!</string>
    <string name="create_a_challenge_any_time_any_place">Create a Challenge Any time, Any place!</string>
    <string name="always_get_paid">Always Get Paid!</string>
    <string name="welcome">Welcome!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?&#160;</string>
    <string name="lbl_sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="mobile">Mobile #*</string>
    <string name="_1">+1</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="alias">Alias</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth*</string>
    <string name="referral_code">Referral Code</string>
    <string name="show">Show</string>
    <string name="create_account">Create Account</string>
    <string name="sports">Sports</string>
    <string name="terms">I agree with terms conditions and privacy policy</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="we_ve_sent_a_4_digit_verification_code">We\'ve sent a 6 digit verification code to</string>
    <string name="n_to_1123_457_890">+1123 457 890</string>
    <string name="resend_password">Resend Code</string>
    <string name="_00_30s">00:30s</string>
    <string name="continue1">Continue</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_have_successfully_n_created_an_account">You\'ve successfully created an account</string>
    <string name="login_2">Login</string>
    <string name="enter_mobile_num">Please enter your registered mobile number. We will send you verification code.</string>
    <string name="send_code">SEND CODE</string>
    <string name="invites">INVITES</string>
    <string name="active">ACTIVE</string>
    <string name="past">PAST</string>
    <string name="message">Messages</string>
    <string name="account">Account</string>
    <string name="_plus1">&#160;</string>
    <string name="_2nd_annual_running_and_cornhole_challenge">2nd Annual Running and \nCornhole Challenge</string>
    <string name="host">HOST</string>
    <string name="jackson">\@Jackson</string>
    <string name="group">GROUP</string>
    <string name="jackpot">JACKPOT</string>
    <string name="_99_999">99,999</string>
    <string name="completed">Completed</string>
    <string name="nicolus">\@Nicolus</string>
    <string name="winner">WINNER</string>
    <string name="_99c">99c</string>
    <string name="hello">Hello</string>
    <string name="video_games">Video Games</string>
    <string name="handshakes">Handshakes</string>
    <string name="currently_no_active_challenges">{currently no active challenges}</string>
    <string name="currently_no_past_challenges">{currently no past challenges}</string>
    <string name="currently_no_invite">{currently no invite}</string>
    <string name="let_s_go">Let\'s Go!!!</string>
    <string name="click_to_create_na_new_challende">Click to Create \na New Challenge</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="theelderbanshee_has_2000_challenged_you">TheElderBanshee has $2000 challenged you!</string>
    <string name="_24w">24w</string>
    <string name="universe">Universe</string>
    <string name="comming_soon">Comming Soon</string>
    <string name="challenge_the_world">Challenge The World.</string>
    <string name="logout_2">Logout</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="my_account">My Account</string>
    <string name="kristy_wingfield">Kristy Wingfield</string>
    <string name="_1_3232322323">+1 3232322323</string>
    <string name="vme_balance">Vme Balance</string>
    <string name="_5288">5288</string>
    <string name="challenge_credits">Challenge Credits</string>
    <string name="c_4">C 4</string>
    <string name="add_balance">Add Balance</string>
    <string name="invite_friend">Invite a Friend</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="faqs">FAQs</string>
    <string name="transfer_friend">Transfer to a Friend</string>
    <string name="scan_code">Scan QR Code</string>
    <string name="withdrow_balance">Withdraw Balance</string>
    <string name="invites_1">INVITES</string>
    <string name="active_1">ACTIVE</string>
    <string name="past_1">PAST</string>
    <string name="mark_all_read"><u>Mark All Read</u></string>
    <string name="notifications">Notifications</string>
    <string name="invited_you_to">Invited you to</string>
    <string name="_2nd_annual_running_and_cornhole_challenge_lorem_ipsum_dolor">2nd Annual Running and Cornhole \nChallenge Lorem ipsum dolor</string>
    <string name="group_challenge">Group Challenge</string>
    <string name="participants">Participants</string>
    <string name="challenge_ending_soon">Challenge Ending Soon</string>
    <string name="ending_on_jan_11_2024">Ending on: Jan 11 2024</string>
    <string name="test_challenge">Test Challenge</string>
    <string name="accept_by_jan_11_2024">Accept By: </string>
    <string name="end_by_jan_11_2024">End By: </string>
    <string name="select_winner">Select Winner</string>
    <string name="comments">Comments</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="sw">SW</string>
    <string name="comment">Comment</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="_4_people">4 People</string>
    <string name="create_a_challenge">Create a Challenge?</string>
    <string name="create_challenge">Create challenge</string>
    <string name="_1v1">1v1</string>
    <string name="group_2">Group</string>
    <string name="previous">Previous</string>
    <string name="invite_to_challenge">Invite to Challenge</string>
    <string name="_0_1">0/1</string>
    <string name="add_details">ADD DETAILS</string>
    <string name="create_challenge_1">CREATE CHALLENGE</string>
    <string name="challenge_created_3">Challenge Created</string>
    <string name="challenge_details">Challenge Details</string>
    <string name="name_of_challenge">Name of Challenge*</string>
    <string name="amount">Amount*</string>
    <string name="end_by">End By*</string>
    <string name="accepted_by">Accepted By*</string>
    <string name="judge">Judge</string>
    <string name="description">Description</string>
    <string name="add_description_optional">Add Description (optional)</string>
    <string name="review_challenge">Review Challenge</string>
    <string name="expired">Expired</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_vel_auctor_sapien_cras_quis_massa_molestie_pretium_elit_eu_mattis_ex_aliquam_placerat_urna_lectus_placerat_pellentesque_erat_ultricies_sed_proin_ac_ante_vitae_neque_rutrum_tempus_donec_scelerisque_euismod_erat_vitae_read_more">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel auctor sapien. Cras quis massa molestie, pretium elit eu, mattis ex. Aliquam placerat urna lectus, placerat pellentesque erat ultricies sed. Proin ac ante vitae neque rutrum tempus. Donec scelerisque euismod erat vitae...</string>
    <string name="invite">&#160;Invite&#160;</string>
    <string name="invited">Invited</string>
    <string name="contact_name_here">Contact name here</string>
    <string name="_88">88</string>
    <string name="_2">2</string>
    <string name="_11">11</string>
    <string name="invites_3">INVITES</string>
    <string name="plaus1">+1</string>
    <string name="create_account1">Create Account</string>
    <string name="asia_culcutta">Asia/Culcutta</string>
    <string name="_192_168_1_45">192.168.1.45</string>
    <string name="_one1">1</string>
    <string name="terms_conditions">terms conditions</string>
    <string name="privacy">privacy</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="accept_play_get_paid">Accept. Play. Get Paid.</string>
    <string name="you_must_be_18_years_old_or_above">You must be 18 years old or above.</string>
    <string name="api_invites">invites</string>
    <string name="api_past">past</string>
    <string name="api_active">active</string>
    <string name="challenge_ending_soon1">Challenge Ending Soon</string>
    <string name="you_re_in_details"><![CDATA[You\'re In! Details > >]]></string>
    <string name="ending_on_feb_08_2024">ENDING ON: </string>
    <string name="lbl_judge">JUDGE</string>
    <string name="_3_participants">3 Participants</string>
    <string name="_0_spectators">0 Spectators</string>
    <string name="space_world">Space World</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_password">Update Password</string>
    <string name="transaction_history">Transaction History</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="tandcs"><![CDATA[T&Cs]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="challengedialog">challengeDialog</string>

</resources>