<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvForgotPasswordHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:text="@string/enter_mobile_num"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMobile"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey"
            app:boxBackgroundColor="@color/black"
            app:hintTextColor="@color/green"
            android:layout_marginTop="@dimen/_30sdp"
            app:prefixText="+1"
            app:prefixTextAppearance="@style/PrefixTextAppearance"
            app:prefixTextColor="@color/white"
            android:layout_marginHorizontal="@dimen/_16sdp"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordHead">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/etMobile"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:textColor="@color/white"
                android:text="@string/_plus1"
                android:maxLength="15"
                android:inputType="number"
                style="@style/CustomEditText"
                android:theme="@style/Theme.App.Base" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnForgotPasswordSendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_25sdp"
            android:letterSpacing="0"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/send_code"
            android:minHeight="0dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:cornerRadius="25dp"
            app:layout_constraintTop_toBottomOf="@id/tilMobile" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>