<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvInviteAChallenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/invite_to_challenge"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/_0_1"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:drawableStart="@drawable/ic_search"
            android:drawableEnd="@drawable/ic_close"
            app:layout_constraintTop_toBottomOf="@id/tvInviteAChallenge"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:drawablePadding="14dp"
            android:hint="@string/search"
            android:maxLines="1"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="10dp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:shadowRadius="5"
            android:singleLine="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rcvContacts"
            app:layout_constraintTop_toBottomOf="@id/etSearch"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>