<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNoData"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLetsGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/let_s_go"
            android:textColor="@color/black_2"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintBottom_toTopOf="@id/tvActiveChallenges"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvActiveChallenges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/currently_no_invite"
            android:textColor="@color/black_2"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toTopOf="@+id/tvCreateChallenge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLetsGo" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCreateChallenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/click_to_create_na_new_challende"
            android:textColor="@color/black_2"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:backgroundTint="@color/black_2"
            android:src="@drawable/ic_arrow_curve_down"
            android:tint="@color/black_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupIfListEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tvActiveChallenges,tvCreateChallenge,tvLetsGo,appCompatImageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>